--- a/css/contact.css
+++ b/css/contact.css
@@ -1,4 +1,5 @@
 .contacts {
+    display: none;
     position: fixed;
     background-color: black;
     background-image: url("../contactsimages/fon.jpg");
