--- a/css/index.css
+++ b/css/index.css
@@ -273,6 +273,17 @@ img {
     }
 }
 
+@media (max-width: 2000px) {
+    body {
+        font-size: 110%;
+    }
+
+    /* grids */
+    .grid_container {
+        grid-template-rows: repeat(50, 1%);
+    }
+}
+
 @media (max-width: 1440px) {
     body {
         font-size: 100%;
@@ -314,15 +325,17 @@ img {
         font-size: 70%;
     }
 
+    .info, .contacts {
+        width: 40vw;
+    }
+
     /* grids */
     .grid_container {
         grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(50, 0.8%);
+        grid-template-rows: repeat(70, 1.3%);
+        grid-row-gap: 5px;
+        grid-column-gap: 5px;
     }
-
-    /*.grid_image {*/
-    /*    object-fit: cover;*/
-    /*}*/
 
     /* <row-start> / <column-start> / <row-end> / <column-end>;*/
     .first {
@@ -331,7 +344,7 @@ img {
     }
 
     .second {
-        grid-area: 6 / 1 / 13 / 1;
+        grid-area: 6 / 1 / 14 / 1;
     }
 
     .third {
@@ -339,19 +352,19 @@ img {
     }
 
     .fourth {
-        grid-area: 13 / 1 / 21 / 1;
+        grid-area: 14 / 1 / 22 / 1;
     }
 
     .fifth {
-        grid-area: 12 / 2 / 19 / 2;
+        grid-area: 12 / 2 / 20 / 2;
     }
 
     .sixth {
-        grid-area: 21 / 1 / 30 / 1;
+        grid-area: 22 / 1 / 30 / 1;
     }
 
     .seventh {
-        grid-area: 19 / 2 / 31 / 2;
+        grid-area: 20 / 2 / 32 / 2;
     }
 
     .eighth {
@@ -359,36 +372,40 @@ img {
     }
 
     .nineth {
-        grid-area: 31 / 2 / 38 / 2;
+        grid-area: 32 / 2 / 39 / 2;
     }
 
     .tenth {
-        grid-area: 36 / 1 / 42 / 1;
+        grid-area: 36 / 1 / 45 / 1;
     }
 
     .eleventh {
-        grid-area: 38 / 2 / 43 / 2;
+        grid-area: 39 / 2 / 44 / 2;
     }
 
     .twelveth {
-        grid-area: 42 / 1 / 50 / 1;
+        grid-area: 45 / 1 / 53 / 1;
     }
 
     .thirteenth {
-        grid-area: 43 / 2 / 52 / 2;
+        grid-area: 44 / 2 / 53 / 2;
     }
 
     .fourteenth {
-        grid-area: 50 / 1 / 57 / 1;
+        grid-area: 53 / 1 / 65 / 1;
     }
 
-    /*.grid_item:nth-child(16) {*/
-    /*    grid-area: 37 / 4 / 48 / 8;*/
+    .fourteenth .grid_image {
+        object-fit: cover;
+    }
+
+    .fifteenth {
+        grid-area: 53 / 2 / 61 / 2;
+    }
+
+    /*.sixteenth {*/
+    /*    grid-area: 52 / 2 / 57 / 2;*/
     /*}*/
-
-    .sixteenth {
-        grid-area: 52 / 2 / 57 / 2;
-    }
 }
 
 
@@ -413,6 +430,22 @@ img {
 
     /* grids */
     .grid_container {
-        grid-template-rows: repeat(50, 0.0001%);
+        grid-template-rows: repeat(70, 1.3%);
+        grid-row-gap: 2px;
+        grid-column-gap: 2px;
+    }
+
+    .info, .contacts_text {
+        font-size: 150%;
+    }
+
+    .fourteenth {
+        grid-area: 53 / 1 / 65 / 1;
+    }
+}
+
+@media (max-width: 500px) {
+    body {
+        font-size: 30%;
     }
 }
