--- a/css/index.css
+++ b/css/index.css
@@ -52,7 +52,7 @@ img {
     background-color: black;
     display: grid;
     grid-template-columns: repeat(10, 8fr);
-    grid-template-rows: repeat(50, 0.8%);
+    grid-template-rows: repeat(70, 0.8%);
     grid-row-gap: 30px;
     grid-column-gap: 30px;
 }
@@ -133,12 +133,20 @@ img {
     grid-area: 37 / 1 / 50 / 4;
 }
 
-/*.grid_item:nth-child(16) {*/
-/*    grid-area: 37 / 4 / 48 / 8;*/
-/*}*/
+.fifteenth {
+    grid-area: 48 / 4 / 56 / 8;
+}
 
 .sixteenth {
     grid-area: 47 / 8 / 54 / 11;
+}
+
+.seventeenth {
+    grid-area: 50 / 1 / 58 / 4;
+}
+
+.eighteenth {
+    grid-area: 56 / 4 / 64 / 8;
 }
 
 /* popup */
@@ -202,10 +210,10 @@ img {
     max-width: 90vw;
 }
 
-.popup_main_image {
+.popup_main_image, .popup_add_image {
     width: auto;
-    max-height: 90vh;
-    max-width: 85vw;
+    max-height: 75vh;
+    max-width: 75vw;
 }
 
 .close_button {
@@ -225,13 +233,6 @@ img {
     width: 0;
     left: 0;
     top: 0;
-}
-
-.popup_add_image {
-    width: auto;
-    max-height: 90vh;
-    max-width: 85vw;
-    object-fit: cover;
 }
 
 .description {
@@ -267,9 +268,9 @@ img {
 
     /* grids */
     .grid_container {
-        grid-template-rows: repeat(50, 1.2%);
-        grid-row-gap: 30px;
-        grid-column-gap: 30px;
+        grid-template-rows: repeat(100, 1.3%);
+        grid-row-gap: 10px;
+        grid-column-gap: 20px;
     }
 }
 
@@ -280,7 +281,9 @@ img {
 
     /* grids */
     .grid_container {
-        grid-template-rows: repeat(50, 1%);
+        grid-template-rows: repeat(100, 1.8%);
+        grid-row-gap: 3px;
+        grid-column-gap: 15px;
     }
 }
 
@@ -291,7 +294,7 @@ img {
 
     /* grids */
     .grid_container {
-        grid-template-rows: repeat(50, 0.8%);
+        grid-template-rows: repeat(100, 1.47%);
     }
 }
 
@@ -316,7 +319,9 @@ img {
 
     /* grids */
     .grid_container {
-        grid-template-rows: repeat(50, 0.4%);
+        grid-template-rows: repeat(100, 1.25%);
+        grid-row-gap: 5px;
+        grid-column-gap: 5px;
     }
 }
 
@@ -332,7 +337,7 @@ img {
     /* grids */
     .grid_container {
         grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(70, 1.3%);
+        grid-template-rows: repeat(100, 1.15%);
         grid-row-gap: 5px;
         grid-column-gap: 5px;
     }
@@ -400,18 +405,26 @@ img {
     }
 
     .fifteenth {
-        grid-area: 53 / 2 / 61 / 2;
+        grid-area: 53 / 2 / 58 / 2;
     }
 
-    /*.sixteenth {*/
-    /*    grid-area: 52 / 2 / 57 / 2;*/
-    /*}*/
+    .sixteenth {
+        grid-area: 65 / 1 / 72 / 1;
+    }
+
+    .seventeenth {
+        grid-area: 58 / 2 / 65 / 2;
+    }
+
+    .eighteenth {
+        grid-area: 65 / 2 / 71 / 2;
+    }
 }
 
 
 @media (max-width: 500px) {
     body {
-        font-size: 40%;
+        font-size: 30%;
     }
 
     .buttons_container {
@@ -430,7 +443,7 @@ img {
 
     /* grids */
     .grid_container {
-        grid-template-rows: repeat(70, 1.3%);
+        grid-template-rows: repeat(100, 1.3%);
         grid-row-gap: 2px;
         grid-column-gap: 2px;
     }
@@ -444,8 +457,15 @@ img {
     }
 }
 
-@media (max-width: 500px) {
-    body {
-        font-size: 30%;
+@media (max-width: 425px) {
+    .grid_container {
+        grid-template-rows: repeat(100, 1.2%);
     }
 }
+
+@media (max-width: 320px) {
+    .grid_container {
+        grid-template-rows: repeat(100, 1.1%);
+    }
+}
+
