--- a/css/index.css
+++ b/css/index.css
@@ -336,89 +336,89 @@ img {
 
     /* grids */
     .grid_container {
-        grid-template-columns: repeat(2, 1fr);
+        /*grid-template-columns: repeat(2, 1fr);*/
         grid-template-rows: repeat(100, 1.15%);
         grid-row-gap: 5px;
         grid-column-gap: 5px;
     }
 
     /* <row-start> / <column-start> / <row-end> / <column-end>;*/
-    .first {
-        grid-area: 1 / 1 / 6 / 3;
-        margin-top: 20px;
-    }
+    /*.first {*/
+    /*    grid-area: 1 / 1 / 6 / 3;*/
+    /*    margin-top: 20px;*/
+    /*}*/
 
-    .second {
-        grid-area: 6 / 1 / 14 / 1;
-    }
+    /*.second {*/
+    /*    grid-area: 6 / 1 / 14 / 1;*/
+    /*}*/
 
-    .third {
-        grid-area: 6 / 2 / 12 / 2;
-    }
+    /*.third {*/
+    /*    grid-area: 6 / 2 / 12 / 2;*/
+    /*}*/
 
-    .fourth {
-        grid-area: 14 / 1 / 22 / 1;
-    }
+    /*.fourth {*/
+    /*    grid-area: 14 / 1 / 22 / 1;*/
+    /*}*/
 
-    .fifth {
-        grid-area: 12 / 2 / 20 / 2;
-    }
+    /*.fifth {*/
+    /*    grid-area: 12 / 2 / 20 / 2;*/
+    /*}*/
 
-    .sixth {
-        grid-area: 22 / 1 / 30 / 1;
-    }
+    /*.sixth {*/
+    /*    grid-area: 22 / 1 / 30 / 1;*/
+    /*}*/
 
-    .seventh {
-        grid-area: 20 / 2 / 32 / 2;
-    }
+    /*.seventh {*/
+    /*    grid-area: 20 / 2 / 32 / 2;*/
+    /*}*/
 
-    .eighth {
-        grid-area: 30 / 1 / 36 / 1;
-    }
+    /*.eighth {*/
+    /*    grid-area: 30 / 1 / 36 / 1;*/
+    /*}*/
 
-    .nineth {
-        grid-area: 32 / 2 / 39 / 2;
-    }
+    /*.nineth {*/
+    /*    grid-area: 32 / 2 / 39 / 2;*/
+    /*}*/
 
-    .tenth {
-        grid-area: 36 / 1 / 45 / 1;
-    }
+    /*.tenth {*/
+    /*    grid-area: 36 / 1 / 45 / 1;*/
+    /*}*/
 
-    .eleventh {
-        grid-area: 39 / 2 / 44 / 2;
-    }
+    /*.eleventh {*/
+    /*    grid-area: 39 / 2 / 44 / 2;*/
+    /*}*/
 
-    .twelveth {
-        grid-area: 45 / 1 / 53 / 1;
-    }
+    /*.twelveth {*/
+    /*    grid-area: 45 / 1 / 53 / 1;*/
+    /*}*/
 
-    .thirteenth {
-        grid-area: 44 / 2 / 53 / 2;
-    }
+    /*.thirteenth {*/
+    /*    grid-area: 44 / 2 / 53 / 2;*/
+    /*}*/
 
-    .fourteenth {
-        grid-area: 53 / 1 / 65 / 1;
-    }
+    /*.fourteenth {*/
+    /*    grid-area: 53 / 1 / 65 / 1;*/
+    /*}*/
 
-    .fourteenth .grid_image {
-        object-fit: cover;
-    }
+    /*.fourteenth .grid_image {*/
+    /*    object-fit: cover;*/
+    /*}*/
 
-    .fifteenth {
-        grid-area: 53 / 2 / 58 / 2;
-    }
+    /*.fifteenth {*/
+    /*    grid-area: 53 / 2 / 58 / 2;*/
+    /*}*/
 
-    .sixteenth {
-        grid-area: 65 / 1 / 72 / 1;
-    }
+    /*.sixteenth {*/
+    /*    grid-area: 65 / 1 / 72 / 1;*/
+    /*}*/
 
-    .seventeenth {
-        grid-area: 58 / 2 / 65 / 2;
-    }
+    /*.seventeenth {*/
+    /*    grid-area: 58 / 2 / 65 / 2;*/
+    /*}*/
 
-    .eighteenth {
-        grid-area: 65 / 2 / 71 / 2;
-    }
+    /*.eighteenth {*/
+    /*    grid-area: 65 / 2 / 71 / 2;*/
+    /*}*/
 }
 
 
@@ -452,9 +452,9 @@ img {
         font-size: 150%;
     }
 
-    .fourteenth {
-        grid-area: 53 / 1 / 65 / 1;
-    }
+    /*.fourteenth {*/
+    /*    grid-area: 53 / 1 / 65 / 1;*/
+    /*}*/
 }
 
 @media (max-width: 425px) {
