--- a/css/index.css
+++ b/css/index.css
@@ -52,9 +52,9 @@ img {
     background-color: black;
     display: grid;
     grid-template-columns: repeat(10, 8fr);
-    grid-template-rows: repeat(70, 0.8%);
-    grid-row-gap: 30px;
-    grid-column-gap: 30px;
+    grid-template-rows: repeat(100, 1.3%);
+    grid-row-gap: 10px;
+    grid-column-gap: 10px;
 }
 
 .grid_item {
@@ -87,6 +87,10 @@ img {
 
 .third {
     grid-area: 8 / 4 / 16 / 8;
+}
+
+.third .grid_image {
+    object-fit: cover;
 }
 
 .fourth {
@@ -135,6 +139,10 @@ img {
 
 .fifteenth {
     grid-area: 48 / 4 / 56 / 8;
+}
+
+.fifteenth .grid_image {
+    object-fit: cover;
 }
 
 .sixteenth {
@@ -281,7 +289,7 @@ img {
 
     /* grids */
     .grid_container {
-        grid-template-rows: repeat(100, 1.8%);
+        grid-template-rows: repeat(100, 1.5%);
         grid-row-gap: 3px;
         grid-column-gap: 15px;
     }
@@ -452,7 +460,7 @@ img {
         grid-column-gap: 2px;
     }
 
-    .info, .contacts_text {
+    .info, .contacts {
         font-size: 200%;
     }
 
