--- a/css/index.css
+++ b/css/index.css
@@ -75,6 +75,10 @@ img {
     transition: all 0.5s ease-in-out;
 }
 
+.description {
+    display: none;
+}
+
 /* <row-start> / <column-start> / <row-end> / <column-end>;*/
 .first {
     grid-area: 1 / 2 / 8 / 10;
@@ -138,7 +142,7 @@ img {
 }
 
 .fifteenth {
-    grid-area: 48 / 4 / 56 / 8;
+    grid-area: 48 / 4 / 54 / 8;
 }
 
 .fifteenth .grid_image {
@@ -154,7 +158,7 @@ img {
 }
 
 .eighteenth {
-    grid-area: 56 / 4 / 64 / 8;
+    grid-area: 54 / 4 / 62 / 8;
 }
 
 /* popup */
@@ -220,8 +224,8 @@ img {
 
 .popup_main_image, .popup_add_image {
     width: auto;
-    max-height: 75vh;
-    max-width: 75vw;
+    max-height: 90vh;
+    max-width: 95vw;
 }
 
 .close_button {
@@ -241,10 +245,6 @@ img {
     width: 0;
     left: 0;
     top: 0;
-}
-
-.description {
-    display: none;
 }
 
 .slider {
@@ -268,6 +268,35 @@ img {
     background-color: #AAA;
     cursor: pointer;
 }
+
+.image_popup_text {
+    position: fixed;
+    display: none;
+    z-index: 4;
+    background-color: white;
+    overflow-y: scroll;
+    height: 100vh;
+}
+
+.arrow {
+    position: fixed;
+    display: none;
+    z-index: 4;
+    cursor: pointer;
+    top: 49%;
+}
+
+.larrow {
+    left: 1%;
+}
+
+.rarrow {
+    right: 1%;
+}
+
+/*.image_popup_text::-webkit-scrollbar {*/
+/*    display: none;*/
+/*}*/
 
 @media (max-width: 2560px) {
     body {
