--- a/css/index.css
+++ b/css/index.css
@@ -92,6 +92,43 @@ img {
     margin-top: 20px;
 }
 
+.paramoni_menu {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.paramoni_menu_item {
+    position: relative;
+    width: 40%;
+    cursor: pointer;
+}
+
+.paramoni_menu_image {
+    width: 100%;
+}
+
+.paramoni_menu_item .popup {
+    display: flex;
+    cursor: pointer;
+}
+
+.paramoni_menu_item:hover .popup {
+    display: flex;
+    cursor: pointer;
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+.paramoni_menu_content {
+    display: none;
+}
+
+.paramoni_chosen_menu_content {
+    width: 100%;
+    height: 100vh;
+}
+
 .second {
     grid-area: 8 / 1 / 16 / 4;
 }
