--- a/css/info.css
+++ b/css/info.css
@@ -111,6 +111,8 @@ h1, h3 {
     background-image: url("../infimages/1.2.jpg");
 }
 
-.addition {
-    margin-bottom: 200px;
+.education {
+    margin-bottom: 20vh;
 }
+
+
