--- a/css/contact.css
+++ b/css/contact.css
@@ -20,7 +20,6 @@
 }
 
 .contacts_container > h2 {
-    width: 80%;
     margin-bottom: 50px;
 }
 
@@ -39,4 +38,9 @@
 
 .contacts_text {
     margin: 0 10px;
+}
+
+.contacts_h2 {
+    width: 100%;
+    margin: auto 0;
 }
