--- a/css/index.css
+++ b/css/index.css
@@ -92,30 +92,54 @@ img {
     margin-top: 20px;
 }
 
-.intro_menu_wrap {
+.paramoni_description {
+    background-color: black;
+    width: 100%;
+    height: auto;
+    padding-bottom: 100px;
+}
+
+.paramoni_description_content {
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    padding: 30px 0;
+    justify-content: space-between;
+    width: 80%;
+    height: auto;
+    margin: auto;
+    padding-top: 50px;
+    color: white;
+}
+
+.paramoni_left {
+    display: inline-flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    width: 60%;
+    margin: 0;
 }
 
 .paramoni_intro {
     display: inline-block;
-    width: 50%;
+    width: 100%;
+}
+
+.paramoni_chosen_menu_content {
+    width: 100%;
+    height: auto;
+    margin: auto;
 }
 
 .paramoni_menu {
-    display: inline-flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-    width: 50%;
+    position: sticky;
+    position: -webkit-sticky;
+    right: 10px;
+    top: 10px;
+    width: 30%;
 }
 
 .paramoni_menu_item {
     position: relative;
-    width: 50%;
+    width: 100%;
     cursor: pointer;
 }
 
@@ -136,16 +160,12 @@ img {
 
 .paramoni_menu_content {
     display: none;
-}
-
-.paramoni_chosen_menu_content {
-    width: 100%;
-    height: 100vh;
+    height: auto;
 }
 
 .paramoni_text_content {
     box-sizing: border-box;
-    width: 60%;
+    width: 100%;
     height: 100%;
     font-family: 'Comfortaa', sans-serif;
     overflow-x: auto;
@@ -153,6 +173,10 @@ img {
     white-space: -moz-pre-wrap !important;
     white-space: -o-pre-wrap;
     word-wrap: break-word;
+}
+
+.paramoni_menu_content_images {
+    width: 100%;
 }
 
 .second {
@@ -185,6 +209,16 @@ img {
 
 .eighth {
     grid-area: 25 / 1 / 32 / 4;
+}
+
+.library_description {
+    width: 100%;
+    background-color: white;
+}
+
+.library_description_content {
+    width: 80%;
+    margin: auto;
 }
 
 .library_plan {
