--- a/css/index.css
+++ b/css/index.css
@@ -176,7 +176,6 @@ img {
 .paramoni_text_content {
     box-sizing: border-box;
     width: 100%;
-    height: 100%;
     font-family: 'Comfortaa', sans-serif;
     overflow-x: auto;
     white-space: pre-wrap;
@@ -186,7 +185,9 @@ img {
 }
 
 .paramoni_menu_content_images {
-    width: 100%;
+    width: 99%;
+    margin: 0;
+    padding: 0;
 }
 
 .second {
