--- a/css/index.css
+++ b/css/index.css
@@ -58,10 +58,29 @@ img {
     width: 97%;
     background-color: black;
     display: grid;
-    grid-template-columns: repeat(10, 8fr);
-    grid-template-rows: repeat(100, 1.3%);
-    grid-row-gap: 10px;
+    grid-template-columns: repeat(10, 1fr);
     grid-column-gap: 10px;
+}
+
+.first {
+    grid-column: 1 / 11;
+    margin-top: 20px;
+}
+
+.first > .grid_image {
+    max-width: 80vw;
+}
+
+.fc {
+    grid-column: 1 / 4;
+}
+
+.sc {
+    grid-column: 4 / 8;
+}
+
+.tc {
+    grid-column: 8 / 11;
 }
 
 .grid_item {
@@ -69,6 +88,8 @@ img {
     justify-self: stretch;
     align-self: stretch;
     overflow: hidden;
+    height: auto;
+    margin: 5px auto;
 }
 
 .grid_item:hover .grid_image {
@@ -76,7 +97,7 @@ img {
 }
 
 .grid_image {
-    object-fit: contain; /* magic style - change to 'cover' and it will looks like perfect */
+    object-fit: cover;
     width: 100%;
     height: 100%;
     transition: all 0.5s ease-in-out;
@@ -95,10 +116,6 @@ img {
 }
 
 /* <row-start> / <column-start> / <row-end> / <column-end>;*/
-.first {
-    grid-area: 1 / 2 / 8 / 10;
-    margin-top: 20px;
-}
 
 .paramoni_description {
     background-color: black;
@@ -190,38 +207,6 @@ img {
     padding: 0;
 }
 
-.second {
-    grid-area: 8 / 1 / 16 / 4;
-}
-
-.third {
-    grid-area: 8 / 4 / 16 / 8;
-}
-
-.third .grid_image {
-    object-fit: cover;
-}
-
-.fourth {
-    grid-area: 8 / 8 / 16 / 11;
-}
-
-.fifth {
-    grid-area: 16 / 1 / 25 / 4;
-}
-
-.sixth {
-    grid-area: 16 / 4 / 27 / 8;
-}
-
-.seventh {
-    grid-area: 16 / 8 / 28 / 11;
-}
-
-.eighth {
-    grid-area: 25 / 1 / 31 / 4;
-}
-
 .library_description {
     width: 100%;
     background-color: white;
@@ -237,53 +222,6 @@ img {
     margin: 0 5%;
 }
 
-.nineth {
-    grid-area: 27 / 4 / 36 / 8;
-}
-
-.tenth {
-    grid-area: 28 / 8 / 37 / 11;
-}
-
-.eleventh {
-    grid-area: 31 / 1 / 36 / 4;
-}
-
-.twelveth {
-     grid-area: 36 / 4 / 47 / 8;
-}
-
-.thirteenth {
-    grid-area: 37 / 8 / 46 / 11;
-}
-
-.fourteenth {
-    grid-area: 36 / 1 / 49 / 4;
-}
-
-.fifteenth {
-    grid-area: 47 / 4 / 53 / 8;
-}
-
-.fifteenth .grid_image {
-    object-fit: cover;
-}
-
-.sixteenth {
-    grid-area: 46 / 8 / 53 / 11;
-}
-
-.seventeenth {
-    grid-area: 49 / 1 / 56 / 4;
-}
-
-.eighteenth {
-    grid-area: 53 / 4 / 61 / 8;
-}
-
-.nineteenth {
-    grid-area: 53 / 8 / 60 / 11;
-}
 
 /* popup */
 .grid_item:hover .popup {
@@ -438,36 +376,17 @@ img {
     body {
         font-size: 120%;
     }
-
-    /* grids */
-    .grid_container {
-        grid-template-rows: repeat(100, 1.3%);
-        grid-row-gap: 10px;
-        grid-column-gap: 20px;
-    }
 }
 
 @media (max-width: 2000px) {
     body {
         font-size: 110%;
     }
-
-    /* grids */
-    .grid_container {
-        grid-template-rows: repeat(100, 1.5%);
-        grid-row-gap: 3px;
-        grid-column-gap: 15px;
-    }
 }
 
 @media (max-width: 1440px) {
     body {
         font-size: 100%;
-    }
-
-    /* grids */
-    .grid_container {
-        grid-template-rows: repeat(100, 1.47%);
     }
 }
 
@@ -490,11 +409,11 @@ img {
         line-height: 60px;
     }
 
-    /* grids */
-    .grid_container {
-        grid-template-rows: repeat(100, 1.25%);
-        grid-row-gap: 5px;
-        grid-column-gap: 5px;
+    .interactive {
+        top: 10px;
+        right: 10px;
+        width: 20px;
+        height: 20px;
     }
 }
 
@@ -509,13 +428,6 @@ img {
 
     .info_image {
         height: 35vh;
-    }
-
-    /* grids */
-    .grid_container {
-        grid-template-rows: repeat(100, 1.15%);
-        grid-row-gap: 5px;
-        grid-column-gap: 5px;
     }
 }
 
@@ -539,30 +451,14 @@ img {
         line-height: 40px;
     }
 
-    /* grids */
-    .grid_container {
-        grid-template-rows: repeat(100, 1.3%);
-        grid-row-gap: 2px;
-        grid-column-gap: 2px;
-    }
-
     .info, .contacts {
         font-size: 200%;
     }
 
-    /*.fourteenth {*/
-    /*    grid-area: 53 / 1 / 65 / 1;*/
-    /*}*/
-}
-
-@media (max-width: 425px) {
-    .grid_container {
-        grid-template-rows: repeat(100, 1.2%);
-    }
-}
-
-@media (max-width: 320px) {
-    .grid_container {
-        grid-template-rows: repeat(100, 1.1%);
+    .interactive {
+        top: 5px;
+        right: 5px;
+        width: 10px;
+        height: 10px;
     }
 }
