--- a/css/index.css
+++ b/css/index.css
@@ -25,10 +25,8 @@ img {
 /*preload*/
 .preloader {
     position: fixed;
-    left: 0;
-    top: 0;
-    right: 0;
-    bottom: 0;
+    width: 100%;
+    height: 100%;
     overflow: hidden;
     /* фоновый цвет */
     background: #000;
@@ -36,14 +34,9 @@ img {
 }
 
 .preloader__image {
-    position: relative;
+    position: absolute;
     top: 50%;
     left: 50%;
-    width: 70px;
-    height: 70px;
-    margin-top: -35px;
-    margin-left: -35px;
-    text-align: center;
 }
 
 .loaded_hiding .preloader {
@@ -52,7 +45,7 @@ img {
 }
 
 .loaded .preloader {
-    display: none;
+    display: block;
 }
 
 /*buttons*/
