--- a/css/info.css
+++ b/css/info.css
@@ -35,14 +35,11 @@ h1, h3 {
 .info_image {
     width: 100%;
     height: 30vw;
+    margin-bottom: 20px;
     background-image: url("../infimages/7.1.jpg");
     background-repeat: no-repeat;
     background-size: contain;
     transition: all 0.5s ease-in-out;
-}
-
-.info_image:hover {
-    background-image: url("../infimages/7.2.jpg");
 }
 
 .flex_container {
